# tufup

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  python-package.yml  requirements-dev.txt  requirements-docs.txt  requirements.txt  setup.cfg  setup.py
.github/: contributing.md
.github/ISSUE_TEMPLATE/: bug_or_feature.md  bug_report.md
.github/workflows/: codeql.yml  publish.yml  python-package.yml  test.yml
docs/source/: api.rst  conf.py  index.rst  robots.txt
examples/client/: example_app.py  trusted_root.json
examples/repo/: repo_workflow_example.py
notsotuf/: client.py  repo.py  utils.py
notsotuf/tools/: client.py  common.py  repo.py
src/notsotuf/: __init__.py  __main__.py  client.py  common.py  repo.py
src/notsotuf.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/notsotuf/repo/: __init__.py  cli.py
src/notsotuf/utils/: __init__.py  file_handler.py  platform_specific.py  windows.py
src/tufup/: __init__.py  __main__.py  client.py  common.py
src/tufup/repo/: __init__.py  cli.py
src/tufup/utils/: __init__.py  platform_specific.py
tests/: __init__.py  test_client.py  test_common.py  test_common_.py  test_notsotuf.py  test_package.py  test_repo.py  test_repo_cli.py  test_tests.py  test_tools_client.py  test_tools_common.py  test_tools_repo.py  test_utils.py  test_utils_file_handler.py  test_utils_platform_specific.py  test_utils_windows.py
tests/data/: README.md
tests/data/keystore/: root  root.pub  root_key  root_key.pub  root_two.pub  snapshot  snapshot.pub  snapshot_key  snapshot_key.pub  targets  targets.pub  targets_key  targets_key.pub  timestamp  timestamp.pub  timestamp_key  timestamp_key.pub
tests/data/keystore/offline_secrets_1/: root  targets
tests/data/keystore/offline_secrets_2/: root_three  root_three.pub  root_two
tests/data/keystore/online_secrets/: snapshot  timestamp
tests/data/repository/metadata/: 1.root.json  2.root.json  root.json  snapshot.json  targets.json  timestamp.json
tests/data/repository/targets/: example_app-2.0.patch  example_app-3.0rc0.patch  example_app-4.0a0.patch
