[metadata]
name = tufup
version = attr: tufup.__version__
author = dennisvang
author_email = djvg@protonmail.com
description = Automated updates for stand-alone Python applications, built upon python-tuf.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dennisvang/tufup
project_urls =
    Documentation = https://tufup.readthedocs.io/en/latest/
    Bug Tracker = https://github.com/dennisvang/tufup/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    bsdiff4==1.2.*
    packaging==21.*
    securesystemslib[crypto,pynacl]==0.24.*
    tuf==2.*

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    tufup = tufup:main
